--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="The Best Place For Original Parts"  data-rh="true"/>
+  <meta name="keywords" content="iSolution, iSolutionLab, iSolutionTraders, online store, products, deals, featured products, iphone parts, iphone original parts, original parts" />
   <link rel="apple-touch-icon" href="./favicon.ico" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
