--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,5 +40,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X8M7S3GJ4Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X8M7S3GJ4Q');
+</script>
 
 </html>
