--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X8M7S3GJ4Q"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-X8M7S3GJ4Q');
-    </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8924536108093219"
-    crossorigin="anonymous"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X8M7S3GJ4Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-X8M7S3GJ4Q');
+  </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8924536108093219"
+  crossorigin="anonymous"></script>
   <meta charset="utf-8" />
   <link rel="icon" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -36,7 +35,6 @@
     -->
   <title>I Solution Trader</title>
 </head>
-
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
@@ -50,6 +48,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
 
+  <script>
+    // Feature detection using navigator.userAgentData
+    const isMobile = /Mobi|Android/i.test(navigator.userAgentData?.userAgent || '');
+
+    // Now you can use the 'isMobile' variable to conditionally render content or perform actions based on the user agent.
+
+    // Add your React app's script here
+  </script>
+</body>
 </html>
